# Autohaus-Anwendung

./: CMakeLists.txt  README.md  application.cpp  test.cppT
Controller/: auto_controller.cpp  auto_controller.h  test_controller.cpp  test_controller.h
Domain/: auto.cpp  auto.h  client.cpp  client.h
Repository/: auto_repository.cpp  auto_repository.h  test_repository.cpp  test_repository.h
UI/: auto_ui.cpp  auto_ui.h
qt_windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui  second_window.cpp  second_window.h  second_window.ui  simple_table.pro
